// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="time"
>
  &lt; 1m
</div>
`;

exports[`renders correctly when from is 0 1`] = `
<div
  className="time"
>
  -
</div>
`;

exports[`renders correctly with ago 1`] = `
<div
  className="time"
>
  &lt; 1m ago
</div>
`;
